apps/shaarli/deployment.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shaarli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: shaarli
  template:
    metadata:
      labels:
        app: shaarli
        tags.datadoghq.com/env: homelab
        tags.datadoghq.com/service: shaarli
        tags.datadoghq.com/version: v1
    spec:
      volumes:
      - name: shaarli
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:shaarli
          targetPortal: 192.168.222.149
          lun: 1
          fsType: ext4
      containers:
      - name: shaarli
        # IMAGE=ghcr.io/shaarli/shaarli; skopeo --override-os linux list-tags "docker://${IMAGE}" | jq -r '.Tags[]' | sort -V | tail -n1
        image: ghcr.io/shaarli/shaarli:v0.16.7
        volumeMounts:
        - mountPath: /var/www/shaarli/data
          name: shaarli
          subPath: data
        - mountPath: /var/www/shaarli/cache
          name: shaarli
          subPath: cache
        ports:
        - containerPort: 80
          name: shaarli
